--- a/src/index.html
+++ b/src/index.html
@@ -45,17 +45,13 @@
       <ul class=garage">
         <li class="car">
           <div class="car__control">
-            <button class="button button__control">
-              <span>Select</span>
-            </button>
-            <button class="button button__control">
-              <span>Remove</span>
-            </button>
+            <button class="button btn-select">Select</button>
+            <button class="button btn-remove">Remove</button>
             <span class="title car__model">Tesla</span>
           </div>
           <div class="race">
             <div class="control-panel">
-              <button type="button" class="button btn-start"><span>Start</span></button>
+              <button type="button" class="button btn-start">Start</button>
               <button type="button" class="button btn-stop" disabled>Stop</button>
             </div>
               <div class="car">
