feat: implement pagination

--- a/src/index.html
+++ b/src/index.html
@@ -29,12 +29,12 @@
       <div class="form">
         <input type="text" name="name" id="nameCareCreate" class="input-text">
         <input type="color" name="color" id="colorCareUpdate">
-        <button class="button" id= "btn-update">Update</button>
+        <button class="button" id="btn-update">Update</button>
       </div>
 
     </div>
     <div class="race-control">
-      <button type="button" class="button button-big">Generate cars</button>
+      <button type="button" class="button" id="btn-generate">Generate cars</button>
       <button type="button" class="button">race</button>
       <button type="button" class="button">reset</button>
     </div>
@@ -44,8 +44,8 @@
       <ul class="garage">
       </ul>
       <div class="pagination">
-        <button type="button" class="button"><span>PREV</span></button>
-        <button type="button" class="button">NEXT</button>
+        <button type="button" class="button" id="btn-prev"><span>PREV</span></button>
+        <button type="button" class="button" id="btn-next">NEXT</button>
       </div>
     </div>
   </main>
