fix: more correct code

--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,8 @@
         <button class="button" id= "btn-create" type="submit">Create</button>
       </div>
       <div class="form">
-        <input type="text" name="name" id="nameCareCreate" class="input-text">
-        <input type="color" name="color" id="colorCareUpdate">
+        <input type="text" name="name" id="updNameCar" class="input-text">
+        <input type="color" name="color" id="updColorCar">
         <button class="button" id="btn-update">Update</button>
       </div>
 
