feat: implement count cars in garage

--- a/src/index.html
+++ b/src/index.html
@@ -39,8 +39,8 @@
       <button type="button" class="button">reset</button>
     </div>
     <div class="garage-wrap">
-      <h1 class="title race__title">Garage</h1>
-      <h2 class="title">Page <span class="page-num">1</span></h2>
+      <h1 class="garage__title">Garage <span id="cars-amount"></span></h1>
+      <h2 class="garage__page">Page № <span class="page-num">1</span></h2>
       <ul class="garage">
       </ul>
       <div class="pagination">
