fix: more correct code

--- a/src/index.html
+++ b/src/index.html
@@ -35,8 +35,8 @@
     </div>
     <div class="race-control">
       <button type="button" class="button" id="btn-generate">Generate cars</button>
-      <button type="button" class="button">race</button>
-      <button type="button" class="button">reset</button>
+      <button type="button" class="button">RACE</button>
+      <button type="button" class="button" disabled>RESET</button>
     </div>
     <div class="garage-wrap">
       <h1 class="garage__title">Garage <span id="cars-amount"></span></h1>
