--- a/src/index.html
+++ b/src/index.html
@@ -71,6 +71,9 @@
         <button type="button" class="button" id="btn-next">NEXT</button>
       </div>
     </div>
+
+
+    <p class="message-winner hidden"></p>
   </main>
 
 </div>
